syntax = "proto3";
package api_config;

import "google/protobuf/duration.proto";

message Server {
    string address = 1;
    uint32 port = 2;
}

message GoogleCalendarApi {
    google.protobuf.Duration update_period = 1;
    string ics_url = 2;
}

message KittyConfig {
    google.protobuf.Duration update_period = 1;
    string url = 2;
}

message TransportConfig {
    message DestinationPoints {
        repeated uint32 stops = 1;
        string destination_name = 2;
    }
    string url = 1;
    string api_key = 2;
    uint32 stop_id = 3;
    repeated DestinationPoints destination_points = 4;
}

message ApiConfig {
    Server server = 1;
    GoogleCalendarApi gcal = 2;
    KittyConfig kitty = 3;
    TransportConfig transport = 4;
}